# asx_data_app

./: .gitignore  AGENTS.md  PLAN.md  api_client.py  app.py  health_response.json  main.py  pyproject.toml  test_api.py  test_signal_handling.py  test_sorting.py
asx-history-ui/: README.md  pyproject.toml
asx-history-ui/src/app/: __init__.py  charts.py  client.py  config.py  main.py  models.py  views.py
asx-history-ui/src/app/static/: style.css
asx-history-ui/src/app/templates/: base.html  company_history.html  index.html
asx-history-ui/static/: style.css
asx-history-ui/templates/: base.html  company_history.html  error.html  index.html
asx-history-ui/tests/: conftest.py  test_charts.py  test_client.py  test_company_history_page.py  test_config.py  test_error_handling.py  test_home_company_selection.py  test_main_routes.py  test_models.py  test_smoke.py
src/app/: charts.py  client.py  config.py  main.py  models.py
src/app/templates/: base.html  company_history.html  index.html
tests/: test_charts.py  test_client.py  test_company_history_page.py  test_config.py  test_main_routes.py  test_models.py  test_smoke.py
